# social-media-api

./: .dockerignore  .env.docker  .env.example  .gitignore  DockerFile  README.md  compose.yaml  conftest.py  pyproject.toml
app/: main.py
app/config/: set_main.py
app/core/: database.py  dependency.py  log.py  security.py  settings.py  utils.py
app/exceptions/: exception.py  handler.py
app/models/: __init__.py  account_recovery.py  comment.py  post.py  refresh_token.py  user.py
app/repositories/: admin.py  comment.py  post.py  recovery_token.py  user.py
app/routers/: admin.py  comment.py  health.py  post.py  user.py
app/schemas/: comment.py  cursor.py  post.py  user.py
app/services/: admin.py  comment.py  post.py  user.py
app/worker/: task.py  worker_config.py
migrations/: env.py
migrations/versions/: 021ba0c322dd_fixed_user_deletion_bug_and_indexed_.py  31d77fff3955_added_uuid_default_to_account_recovery_.py  3abd865a7987_added_role_column_to_user_model.py  4662ccd2ddf6_added_username_column_in_userdeletion_.py  75109cb372dd_changed_role_type_enum_to_str.py  d383069afd8e_added_unique_constraints_to_user_table.py  ff1493df72c1_created_user_deletion_table.py
test/: test_user.py
tests/: helper.py  test_comment.py  test_post.py  test_user.py
