[project]
name = "social-media-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "arq>=0.27.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=5.3.1",
    "resend>=2.26.0",
    "sqlalchemy>=2.0.48",
    "upstash-redis>=1.7.0",
    "uvicorn>=0.41.0",
]
